# codebase-analyzer-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
codebase_agent/: __init__.py  main.py
codebase_agent/agents/: code_analyzer.py  manager.py  task_specialist.py
codebase_agent/tools/: shell_tool.py
codebase_agent/utils/: __init__.py  autogen_utils.py  logging.py
docs/: examples.md  installation.md  troubleshooting.md
src/codebase_agent/: main.py
src/codebase_agent/agents/: __init__.py  code_analyzer.py  manager.py  task_specialist.py
src/codebase_agent/config/: __init__.py  configuration.py
src/codebase_agent/tools/: __init__.py  shell_tool.py
src/codebase_agent/utils/: logging.py
tests/: README.md  test_code_analyzer.py  test_task_specialist.py
tests/e2e/: test_cli_e2e.sh
tests/integration/: test_code_analyzer_integration.py  test_code_analyzer_integration_nodejs.py  test_code_analyzer_knowledge_base_integration.py  test_code_analyzer_llm_integration.py  test_code_analyzer_milestone_integration.py  test_manager_integration.py  test_task_specialist_integration.py
tests/unit/: test_code_analyzer.py  test_configuration.py  test_configuration_fuzzy_matching.py  test_configuration_intelligent_matching.py  test_logging.py  test_manager.py  test_shell_tool.py  test_task_specialist.py
