[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-agent"
version = "0.3.0"
description = "AutoGen-powered codebase understanding and analysis agent"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Codebase Agent Team", email = "ifloveyou2008@gmail.com"}
]
maintainers = [
    {name = "Codebase Agent Team", email = "ifloveyou2008@gmail.com"}
]
keywords = ["autogen", "codebase", "analysis", "ai", "agents", "code-understanding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat==0.7.4",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "autogen-ext[openai]==0.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=25.1.0",
    "ruff>=0.12.0",
    "pre-commit>=3.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
    "markdown>=3.5.0",
]

# Optional mypy dependency for type checking (not enforced in CI)
typing = [
    "mypy>=1.17.1",
]

[project.scripts]
codebase-agent = "codebase_agent.main:cli"

[project.urls]
Homepage = "https://github.com/wirelessr/codebase-analyzer-agent"
Repository = "https://github.com/wirelessr/codebase-analyzer-agent.git"
Issues = "https://github.com/wirelessr/codebase-analyzer-agent/issues"
Documentation = "https://github.com/wirelessr/codebase-analyzer-agent#readme"
"Source Code" = "https://github.com/wirelessr/codebase-analyzer-agent"
"Bug Tracker" = "https://github.com/wirelessr/codebase-analyzer-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["codebase_agent"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/unit/test_configuration_intelligent_matching.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests that require real LLM calls",
    "unit: marks tests as unit tests (fast, isolated tests)",
    "slow: marks tests as slow running tests",
]

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
